--- a/index.html
+++ b/index.html
@@ -6,13 +6,80 @@
   <title>Ghost Tours</title>
   <!-- Note that the following 3 tasks each use the "link" element, but in a different way -->
     <!-- Link to existing css file found in assets folder -->
+     <link rel="stylesheet" href="assets/css/styles.css">
     <!-- Add a favicon with the image called "cartoon-ghost.png" in the images folder -->
+    <link rel="icon" type="image/x-icon" href="assets/imgs/cartoon-ghost.png">
+    <link rel="apple-touch-icon" type="image/x-icon" href="assets/imgs/cartoon-ghost.png">
    <!-- Find the font Vollkorn on Google Fonts and add that here -->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
   
 </head>
 <body>
   <main>
     <h1>Ghost Tours</h1>
+    <img id="ghost" src="assets/imgs/cartoon-ghost.png" alt="An etremely spooky ghost">
+    <h2>Choose Your Tour</h2>
+    <section id="tours">
+      <article>
+        <img src="assets/imgs/haunted-house-1.png" alt="A Haunted Cottage">
+        <div class="overlay">
+          <h3>A Haunted Cottage</h3>
+          <p>This house is so scary i shit myself</p>
+        </div>
+      </article>
+      <article>
+        <img src="assets/imgs/haunted-house-2.jpeg" alt="A Haunted Colonial Estate">
+        <div class="overlay">
+          <h3>A Colonial Homestead</h3>
+          <p>Help please its so scary</p>
+        </div>
+      </article>
+      <article>
+        <img src="assets/imgs/haunted-house-3.jpeg" alt="A Haunted Manshin">
+        <div class="overlay">
+          <h3>A Haunted Mansion</h3>
+          <p>FREE ME THE VOICES WONT STOP</p>
+        </div>
+      </article>
+    </section>
+
+    <section>
+     <h2>Ghost of the Month</h2>
+     <img id="boo" src="assets/imgs/boo.webp" alt="Boo from Mario"> 
+    </section>
+
+    <section id="book">
+      <h2>Book Your Tour</h2>
+      <form>
+        <label for="name">Name</label>
+        <br>
+        <input type="text" id="name">
+        <br>
+        <label for="email">Email</label>
+        <br>
+        <input type="email" id="email">
+        <br>
+        <label for="tour-type">Select Your Your</label>
+        <br>
+        <select id="your-type">
+          <option>The Pant Shitter</option>
+          <option>The Asylum</option>
+          <option>The Schizophrenic Scare</option>
+        </select>
+        <br>
+        <label for="message">Please tell us anything else you'd like us to know!</label>
+        <br>
+        <textarea id="message"></textarea>
+        <br>
+        <button>Book Tour</button>
+
+      </form>
+    </section>
   </main>
+  <footer>
+<img id="bottom-border" src="assets/imgs/ghost-border.png">
+  </footer>
 </body>
 </html>
